# mcp-ui-py

./: .gitignore  README.md  pyproject.toml
src/: client.py  mcp_ui.py  server.py
tests/: test_client_integration.py  test_mcp_ui.py  test_server_client_integration.py
